--- a/index.html
+++ b/index.html
@@ -11,24 +11,21 @@ content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no"
 
 <!-- Meta Pixel Code -->
 <script>
-!function(f,b,e,v,n,t,s){
-if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+!function(f,b,e,v,n,t,s)
+{if(f.fbq)return;n=f.fbq=function(){n.callMethod?
 n.callMethod.apply(n,arguments):n.queue.push(arguments)};
 if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
 n.queue=[];t=b.createElement(e);t.async=!0;
 t.src=v;s=b.getElementsByTagName(e)[0];
 s.parentNode.insertBefore(t,s)}(window, document,'script',
 'https://connect.facebook.net/en_US/fbevents.js');
-
-fbq('init', '1118719643215347'); 
+fbq('init', '1118719643215347');
 fbq('track', 'PageView');
 </script>
-<noscript>
-<img height="1" width="1" style="display:none"
-src="https://www.facebook.com/tr?id=1118719643215347&ev=PageView&noscript=1"/>
-</noscript>
+<noscript><img height="1" width="1" style="display:none"
+src="https://www.facebook.com/tr?id=1118719643215347&ev=PageView&noscript=1"
+/></noscript>
 <!-- End Meta Pixel Code -->
-
 <style>
 *{
 margin:0;
@@ -239,4 +236,5 @@ LIVE • <span class="counter-number" id="liveNumber"></span> USERS IN VC
 </div>
 
 </body>
+
 </html>
