--- a/index.html
+++ b/index.html
@@ -11,16 +11,29 @@
 <!-- Meta Pixel Code -->
 <script>
 !function(f,b,e,v,n,t,s){
-if(f.fbq)return;n=f.fbq=function(){n.callMethod?
-n.callMethod.apply(n,arguments):n.queue.push(arguments)};
-if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
-n.queue=[];t=b.createElement(e);t.async=!0;
-t.src=v;s=b.getElementsByTagName(e)[0];
-s.parentNode.insertBefore(t,s)}(window, document,'script',
-'https://connect.facebook.net/en_US/fbevents.js');
+if(f.fbq)return;
+n=f.fbq=function(){
+n.callMethod ? n.callMethod.apply(n,arguments) : n.queue.push(arguments)
+};
+if(!f._fbq)f._fbq=n;
+n.push=n;
+n.loaded=!0;
+n.version='2.0';
+n.queue=[];
+t=b.createElement(e);
+t.async=!0;
+t.src=v;
+s=b.getElementsByTagName(e)[0];
+s.parentNode.insertBefore(t,s);
+}(window, document,'script','https://connect.facebook.net/en_US/fbevents.js');
 
+/* INIT */
 fbq('init', '1118719643215347');
-fbq('track', 'PageView');
+
+/* FORCE PAGEVIEW AFTER LOAD */
+window.addEventListener('load', function() {
+    fbq('track', 'PageView');
+});
 </script>
 
 <noscript>
@@ -135,4 +148,5 @@ LIVE • <span class="counter-number" id="liveNumber"></span> USERS IN VC
 </div>
 
 </body>
+
 </html>
